Fix: Fix headings being the wrong color. Code cleanup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,11 @@ hr {
 /*Text with this class will be white*/
 .white {
     color: #eff0f3;
-    text-decoration-color: #eff0f3 !important;
+    text-decoration-color: #eff0f3;
+}
+.white h2{
+    color: #eff0f3;
+    text-decoration-color: #eff0f3;
 }
 
 /*As a general rule, unrelated paragraph and headings should have 2x the margin as related ones*/
@@ -131,19 +135,14 @@ hr {
     margin-top: 2rem;
 }
 
-/*This is applied to the parent element of a heading to make it underlined in a specific style. Used on the hero image texts*/
-.lined-heading {
+/*Used on the hero image texts to make them a specific style*/
+
+.lined-heading{
     text-align: center;
-    font-size: 1.5em;
+    font-size: 2rem;
     text-decoration: underline;
     text-decoration-thickness: 3px;
     text-underline-offset: 5px;
-    text-decoration-color: #eff0f3;
-}
-
-.lined-heading h2 {
-    font-size: 2rem;
-    color: #eff0f3;
 }
 
 /*An overlay that darkens the color*/
